<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/sound_off"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/cd_sound_toggle"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/sound_image"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/popup_settings_sound_image_size"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/button_music_on" />

        <TextView
            android:id="@+id/sound_off_text"
            android:layout_width="150dp"
            android:layout_height="@dimen/popup_settings_sound_image_size"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/grobold"
            android:gravity="start|center_vertical"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/sound_on"
            android:textColor="@color/white"
            android:textSize="@dimen/popup_settings_sound_text_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/cd_rate"
        android:gravity="start|center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/popup_settings_sound_image_size"
            android:layout_marginStart="5dp"
            android:adjustViewBounds="true"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            android:src="@drawable/button_rate" />

        <TextView
            android:id="@+id/rate_text"
            android:layout_width="150dp"
            android:layout_height="@dimen/popup_settings_sound_image_size"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/grobold"
            android:gravity="start|center_vertical"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="4"
            android:text="@string/rate_this"
            android:textColor="@color/white"
            android:textSize="@dimen/popup_settings_sound_text_size" />
    </LinearLayout>

</merge>
