<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingTop="@dimen/album_padding_top"
        android:paddingBottom="@dimen/album_padding_bottom"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/sections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/album_padding_side"
            android:paddingEnd="@dimen/album_padding_side" />
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginTop="@dimen/screen_back_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            style="@style/RoadHeaderText"
            android:textSize="@dimen/who_prompt_text_size"
            tools:text="@string/album_title" />

        <TextView
            android:id="@+id/hint"
            style="@style/RoadHeaderText"
            android:alpha="0.85"
            android:text="@string/album_hint"
            android:textSize="@dimen/album_hint_text_size" />
    </LinearLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/screen_back_button"
        android:layout_height="@dimen/screen_back_button"
        android:layout_gravity="start|top"
        android:layout_marginStart="@dimen/screen_back_margin"
        android:layout_marginTop="@dimen/screen_back_margin"
        android:contentDescription="@string/cd_back"
        android:padding="4dp"
        tools:src="@drawable/button_back" />

</FrameLayout>
