<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:layoutDirection="ltr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margine_top">

            <!-- The question and the picture asked for. -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/prompt"
                    style="@style/RoadHeaderText"
                    android:maxLines="1"
                    android:textSize="@dimen/who_prompt_text_size"
                    android:visibility="invisible"
                    tools:text="@string/peek_find"
                    tools:visibility="visible" />

                <ImageView
                    android:id="@+id/target"
                    android:layout_width="@dimen/peek_target_size"
                    android:layout_height="@dimen/peek_target_size"
                    android:layout_marginStart="@dimen/road_header_gap"
                    android:background="@drawable/tile"
                    android:contentDescription="@string/cd_tile"
                    android:padding="@dimen/peek_target_padding"
                    android:visibility="invisible"
                    tools:visibility="visible" />
            </LinearLayout>

            <ImageView
                android:id="@+id/time_bar_image"
                android:layout_width="@dimen/clock_width"
                android:layout_height="@dimen/clock_height"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/clock_margin_right"
                android:importantForAccessibility="no"
                android:visibility="invisible"
                tools:src="@drawable/time_bar"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/time_bar_text"
                style="@style/GameText"
                android:layout_width="@dimen/clock_width"
                android:layout_height="@dimen/clock_height"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/clock_text_margin_right"
                android:gravity="center"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="4"
                android:shadowDy="4"
                android:shadowRadius="4"
                android:textColor="@color/white"
                android:textSize="@dimen/clock_text_size"
                android:visibility="invisible"
                tools:text="00:03"
                tools:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/game_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipChildren="false" />

    </LinearLayout>

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="@dimen/screen_back_button"
        android:layout_height="@dimen/screen_back_button"
        android:layout_gravity="start|top"
        android:layout_marginStart="@dimen/screen_back_margin"
        android:layout_marginTop="@dimen/screen_back_margin"
        android:contentDescription="@string/cd_back"
        android:padding="4dp"
        tools:src="@drawable/button_back" />

</FrameLayout>
