<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="@dimen/popup_button_back"
        android:layout_height="@dimen/popup_button_back"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/popup_button_back_left"
        android:layout_marginBottom="@dimen/popup_button_back_bottom"
        android:contentDescription="@string/cd_back"
        android:src="@drawable/button_back" />

    <ImageView
        android:id="@+id/button_next"
        android:layout_width="@dimen/popup_button_back"
        android:layout_height="@dimen/popup_button_back"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/popup_button_back_left"
        android:layout_marginBottom="@dimen/popup_button_back_bottom"
        android:contentDescription="@string/cd_play_again"
        android:src="@drawable/button_again" />

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="@dimen/popup_button_star_size"
        android:layout_height="@dimen/popup_button_star_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/popup_button_star_margin_1"
        android:layout_marginTop="@dimen/popup_button_star_margin_top"
        android:contentDescription="@string/cd_star"
        android:src="@drawable/level_complete_star"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="@dimen/popup_button_star_size"
        android:layout_height="@dimen/popup_button_star_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/popup_button_star_margin_2"
        android:layout_marginTop="@dimen/popup_button_star_margin_top"
        android:contentDescription="@string/cd_star"
        android:src="@drawable/level_complete_star"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="@dimen/popup_button_star_size"
        android:layout_height="@dimen/popup_button_star_size"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/popup_button_star_margin_3"
        android:layout_marginTop="@dimen/popup_button_star_margin_top"
        android:contentDescription="@string/cd_star"
        android:src="@drawable/level_complete_star"
        android:visibility="invisible" />

    <TextView
        style="@style/GameText"
        android:id="@+id/time_bar_text"
        android:layout_width="@dimen/popup_button_time_width"
        android:layout_height="@dimen/popup_button_time_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/popup_button_time_margin_right"
        android:layout_marginBottom="@dimen/popup_button_time_margin_bottom"
                android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:textColor="@color/white"
        android:textSize="@dimen/popup_button_time_size"
        tools:text="00:42" />

    <TextView
        style="@style/GameText"
        android:id="@+id/score_bar_text"
        android:layout_width="@dimen/popup_button_time_width"
        android:layout_height="@dimen/popup_button_time_height"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/popup_button_time_margin_right"
        android:layout_marginBottom="@dimen/popup_button_score_margin_bottom"
                android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="4"
        android:shadowDy="4"
        android:shadowRadius="4"
        android:textColor="@color/white"
        android:textSize="@dimen/popup_button_time_size"
        tools:text="240" />

</merge>
